[gd_scene load_steps=34 format=3 uid="uid://bpsxwdgxndx4j"]

[ext_resource type="Script" path="res://Level_Selection.gd" id="1_cnbqw"]
[ext_resource type="Texture2D" uid="uid://bt8hi0carpgt6" path="res://PhoneBook.png" id="2_tllpj"]
[ext_resource type="Script" path="res://Blue.gd" id="2_xuii3"]
[ext_resource type="Script" path="res://Orange.gd" id="3_20g7r"]
[ext_resource type="Texture2D" uid="uid://cnyo14w10k43p" path="res://red1.png" id="3_ncalr"]
[ext_resource type="Texture2D" uid="uid://calnlj8qg3arv" path="res://catGirl.png" id="4_83xka"]
[ext_resource type="Script" path="res://Yellow.gd" id="4_sw15o"]
[ext_resource type="Texture2D" uid="uid://dc38yngwa77as" path="res://egg1.png" id="6_elrlh"]
[ext_resource type="Texture2D" uid="uid://by1fq46dc2gks" path="res://yellow1.png" id="8_wmms4"]
[ext_resource type="PackedScene" path="res://pause_button.tscn" id="10_8trsf"]
[ext_resource type="Texture2D" uid="uid://ca7ke4qs7nsom" path="res://Level Selection Redpng.png" id="11_7hduw"]
[ext_resource type="Texture2D" uid="uid://c4ufh4uei3b8j" path="res://Level Selection Red Clicked .png" id="12_w5kl4"]
[ext_resource type="Texture2D" uid="uid://c3aq8e148sps4" path="res://Level Selection Orange .png" id="13_n2h1f"]
[ext_resource type="Texture2D" uid="uid://du3a4nmh0k5w8" path="res://Level Selection Orange Clicked .png" id="14_fkon7"]
[ext_resource type="Texture2D" uid="uid://dhp2k2bi1a1wu" path="res://Level Selection Yellow.png" id="15_ny515"]
[ext_resource type="Texture2D" uid="uid://vrdc6bvdg8dy" path="res://Level Selection Yellow Clicked .png" id="16_3en2k"]
[ext_resource type="Texture2D" uid="uid://1trna2uswovc" path="res://Level Selection Blue .png" id="17_p556r"]
[ext_resource type="Texture2D" uid="uid://cnmfa6gjn2mau" path="res://Level Selection Blue Clicked .png" id="18_yv1f6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6f4sf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_685x1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i5t0e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a5h0y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gr8hh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ylyv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hrf2n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g5dr1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3q0fs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_efxd7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_asnfh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5bi4l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h6p4p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rit1e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_saw1l"]

[node name="Level_Selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -40.0
offset_right = -83.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cnbqw")

[node name="PhoneBook" type="Sprite2D" parent="."]
position = Vector2(654.187, 364.125)
scale = Vector2(4.56125, 4.56125)
texture = ExtResource("2_tllpj")

[node name="Red" type="Button" parent="."]
layout_mode = 0
offset_left = 192.187
offset_top = 66.125
offset_right = 348.187
offset_bottom = 272.125
theme_override_styles/normal = SubResource("StyleBoxEmpty_6f4sf")
theme_override_styles/hover = SubResource("StyleBoxEmpty_685x1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_i5t0e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a5h0y")
icon = ExtResource("3_ncalr")

[node name="Blue" type="Button" parent="."]
layout_mode = 0
offset_left = 195.187
offset_top = 310.125
offset_right = 353.187
offset_bottom = 510.125
theme_override_styles/normal = SubResource("StyleBoxEmpty_gr8hh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7ylyv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hrf2n")
icon = ExtResource("4_83xka")
script = ExtResource("2_xuii3")

[node name="Orange" type="Button" parent="."]
layout_mode = 0
offset_left = 971.187
offset_top = 65.125
offset_right = 1119.19
offset_bottom = 263.125
theme_override_styles/normal = SubResource("StyleBoxEmpty_g5dr1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3q0fs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_efxd7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_asnfh")
icon = ExtResource("6_elrlh")
script = ExtResource("3_20g7r")

[node name="Yellow" type="Button" parent="."]
layout_mode = 0
offset_left = 979.187
offset_top = 285.125
offset_right = 1127.19
offset_bottom = 483.125
theme_override_styles/normal = SubResource("StyleBoxEmpty_5bi4l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h6p4p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rit1e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_saw1l")
icon = ExtResource("8_wmms4")
script = ExtResource("4_sw15o")

[node name="Pause_Button" parent="." instance=ExtResource("10_8trsf")]
visible = false
layout_mode = 1
offset_left = 243.0
offset_top = 142.0
offset_right = -651.0
offset_bottom = -75.0

[node name="RedScene" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 130.0
offset_right = 656.0
offset_bottom = 290.0
texture_normal = ExtResource("11_7hduw")
texture_pressed = ExtResource("12_w5kl4")

[node name="RichTextLabel" type="RichTextLabel" parent="RedScene"]
layout_mode = 0
offset_left = 94.0
offset_top = 32.0
offset_right = 287.0
offset_bottom = 109.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 50
text = "Play"

[node name="OrangeScene" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 677.0
offset_top = 130.0
offset_right = 997.0
offset_bottom = 290.0
texture_normal = ExtResource("13_n2h1f")
texture_pressed = ExtResource("14_fkon7")

[node name="RichTextLabel" type="RichTextLabel" parent="OrangeScene"]
offset_left = 94.0
offset_top = 32.0
offset_right = 287.0
offset_bottom = 109.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 50
text = "Play"

[node name="YellowScene" type="TextureButton" parent="."]
offset_left = 671.0
offset_top = 352.0
offset_right = 991.0
offset_bottom = 512.0
texture_normal = ExtResource("15_ny515")
texture_pressed = ExtResource("16_3en2k")

[node name="RichTextLabel" type="RichTextLabel" parent="YellowScene"]
offset_left = 94.0
offset_top = 32.0
offset_right = 287.0
offset_bottom = 109.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 50
text = "Play"

[node name="BlueScene4" type="TextureButton" parent="."]
offset_left = 324.0
offset_top = 350.0
offset_right = 644.0
offset_bottom = 510.0
texture_normal = ExtResource("17_p556r")
texture_pressed = ExtResource("18_yv1f6")

[node name="RichTextLabel" type="RichTextLabel" parent="BlueScene4"]
offset_left = 94.0
offset_top = 32.0
offset_right = 287.0
offset_bottom = 109.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 50
text = "Play"

[connection signal="pressed" from="Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="Orange" to="." method="_on_orange_pressed"]
[connection signal="pressed" from="Yellow" to="." method="_on_yellow_pressed"]
[connection signal="button_down" from="RedScene" to="." method="_on_red_scene_button_down"]
[connection signal="button_down" from="OrangeScene" to="." method="_on_orange_scene_button_down"]
[connection signal="button_down" from="YellowScene" to="." method="_on_yellow_scene_button_down"]
[connection signal="button_down" from="BlueScene4" to="." method="_on_blue_scene_4_button_down"]
